--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <title>My Character</title>
 </head>
@@ -30,7 +31,7 @@
                     
                     <p>alone, becomes far stronger when protected by allies.</p>
                 </p>
-                    <p><button><a href="https://arneldiana17.github.io/AdianaAct-5-github.io/">View More..</a></button></p>
+                    <a href="https://arneldiana17.github.io/AdianaAct-5-github.io/">View More..</a>
             </div>
         </section>
         <section class="m2_container">
@@ -53,8 +54,9 @@
                 <p><button><a href="https://arneldiana17.github.io/AdianaAct-5-github.io/">View More..</a></button></p>
             </div>
         </section>
+        <section class="m_container">
             <h2 class="head2" id="skills">SKILLS</h2>
-            <section class="m3_container">
+            <div class="m3_container">
                 <div class="item1">
                     <img src="ulti.png" class="u">
                     <h3>Dragon Tornado</h3>
@@ -90,10 +92,12 @@
                         drawing on the power of the mythical Dragon God.
                     </p>
                 </div>   
+                </div>
+             <button><a href="https://arneldiana17.github.io/aDianaAct-7-github.io/">View More..</a></button>
             </section>
-                <button class="butt"><a href="https://arneldiana17.github.io/aDianaAct-7-github.io/">View More..</a></button>
+            <section class="charcont">
                 <h2 class="head3" id="char">CHARACTERS</h2>
-            <section class="charco">
+                <div class="charco">
                 <div class="char">
                     <img src="war.png">
                     <h3>WARRIOR</h3>
@@ -114,9 +118,9 @@
                     <h3>LANCER</h3>
                     <h4><a href="https://arneldiana17.github.io/aDianaAct-4-github.io/">Know More--></a></h4>
                 </div>
+                </div>
+                <button><a href="https://arneldiana17.github.io/aDianaAct-7-github.io/">View All..</a></button>
             </section>
-                <button class="butt"><a href="https://arneldiana17.github.io/aDianaAct-7-github.io/">View All..</a></button>
-
             <section class="abcon">
                 <div class="acon1">
                      <h1>Venture into the open world 
